# nhi_rag_system

./: .gitattributes  LICENSE  README.md  api_main.py  main.py  pyproject.toml
data/crawl_scripts/: healthbank.json  healthbank.py  insurance.json  insurance.py  merge.py  pdf.json
data/processed/: chunks.json
data/raw_data/: QA_dataset.json  analyze_lengths.py  chunk_preview.py
data/raw_data/crawl_scripts/: other.json  other.py
data/table/: table.json
data/vectordb/chroma/: chroma.sqlite3
eval/: queries.json  queries_realistic.json  results_viewer.html  run_ragas_eval.py  run_retrieval_eval.py
eval/results/: ragas_eval_queries_realistic_20260430_161834.json  ragas_eval_queries_realistic_20260430_213029.json  ragas_eval_queries_realistic_20260430_225212.json  retrieval_eval_20260430_001524.json  retrieval_eval_queries_realistic_20260430_150859.json
scripts/: analyze_lengths.py  build_chunks.py  build_eval_queries.py  chunk_preview.py  index_chroma.py  search_chroma.py
src/api/: __init__.py  schemas.py
src/rag/: __init__.py  bootstrap.py  config.py  router.py  service.py
src/tablestores/: __init__.py  table_store.py
src/vectorstores/: __init__.py  chroma_store.py
static/: app.js  style.css
templates/: index.html
